# cubesat-specs

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
conda-forge/: recipe.yaml
docs/: conf.py  index.rst
docs/api/: modules.rst
scripts/: export_json.py
src/cubesat_specs/: __init__.py  _models.py  form_factors.py  launch_providers.py  standards.py
src/cubesat_specs/data/: deployers.json  form_factors.json  launch_providers.json  standards_cds.json  standards_pqs.json
tests/: test_data_json.py  test_form_factors.py  test_launch_providers.py  test_standards.py
